# Minuet-Lang

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  try_test_suite.sh  utility.sh
benchmarks/: fibonacci_recur.py
docs/: README.md  grammar.md  usage.md  vm.md
src/: CMakeLists.txt  main.cpp
src/bcgen/: CMakeLists.txt  emitter.cpp  emitter.hpp
src/codegen/: CMakeLists.txt  disassemble.cpp  disassemble.hpp  emitter.cpp  emitter.hpp
src/driver/: CMakeLists.txt  driver.cpp  driver.hpp  sources.cpp  sources.hpp  utils.hpp
src/driver/plugins/: disassembler.cpp  disassembler.hpp  ir_dumper.cpp  ir_dumper.hpp  printer.hpp  tac_condenser.cpp  tac_condenser.hpp
src/frontend/: CMakeLists.txt  lexicals.hpp  lexing.cpp  lexing.hpp  parsing.cpp  parsing.hpp
src/ir/: CMakeLists.txt  cfg.cpp  cfg.hpp  convert_ast.cpp  convert_ast.hpp  pass.hpp  printing.cpp  printing.hpp  steps.cpp  steps.hpp
src/mintrinsics/: CMakeLists.txt  mnl_lists.cpp  mnl_lists.hpp  mnl_stdio.cpp  mnl_stdio.hpp
src/runtime/: CMakeLists.txt  bytecode.cpp  bytecode.hpp  fast_value.cpp  fast_value.hpp  heap_storage.cpp  heap_storage.hpp  heap_value_base.hpp  natives.hpp  sequence_value.cpp  sequence_value.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
src/semantics/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  enums.hpp
src/syntax/: ast.hpp  exprs.hpp  stmts.hpp
stdlib/: lists.mnl  stdio.mnl
test_suite/ill_formed/: invalid_assign.mnl  invalid_calls.mnl  unknown_name.mnl
test_suite/simple/: access_seqs.mnl  args.mnl  arithmetic.mnl  binary_search.mnl  demo_lib.mnl  fibonacci.mnl  fibonacci_iter.mnl  is_prime.mnl  more_sums.mnl  print_seqs.mnl  sum_loop.mnl  try_print.mnl  use_demo_lib.mnl
test_suite/unused/: binary_search.mnl  list_natives.mnl  nested_loops.mnl  simple_stdin.mnl
